--- a/signup.html
+++ b/signup.html
@@ -81,7 +81,7 @@
                   <input type="checkbox" value="remember-me"> Remember me
                 </label>
               </div>
-              <button class="w-100 btn btn-lg btn-primary" id="sign" type="submit"><a href="./frontpage.html">Sign-Up</a></button>
+              <button class="w-100 btn btn-lg btn-primary" id="sign" type="submit" onclick="submitData()"><a href="./frontpage.html">Sign-Up</a></button>
               <hr class="my-4">
               <small class="text-body-secondary">By clicking Sign-up, you agree to the terms of use.</small>
             </form>
