--- a/signup.html
+++ b/signup.html
@@ -61,19 +61,19 @@
           <div class="col-md-10 mx-auto col-lg-5">
             <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
               <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="user" placeholder="User name">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">User Name</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">Email address</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="password" class="form-control" id="pswd" placeholder="Password">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                 <label for="floatingPassword">Password</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="password" class="form-control" id="rpswd" placeholder="Password">
+                <input type="password" class="form-control" id="conformPassword" placeholder="Password">
                 <label for="floatingPassword">Conform Password</label>
               </div>
               <div class="checkbox mb-3">
@@ -81,37 +81,14 @@
                   <input type="checkbox" value="remember-me"> Remember me
                 </label>
               </div>
-              <button class="w-100 btn btn-lg btn-primary" id="sign" type="submit" onclick="submitData()"><a href="./frontpage.html">Sign-Up</a></button>
+              <button class="w-100 btn btn-lg btn-primary" id="sign" type="submit"><a href="./frontpage.html">Sign-Up</a></button>
               <hr class="my-4">
               <small class="text-body-secondary">By clicking Sign-up, you agree to the terms of use.</small>
             </form>
           </div>
         </div>
       </div>
-    <script>
-        function submitData() {
-            var user = $("#user").val();
-            var email = $("#email").val();
-            var pswd = $("#pswd").val();
-            var rpswd = $("#rpswd").val();
-            $.ajax({
-                type: "POST",
-                url: "http://localhost:5000/submitData",
-                data: {
-                    user: user,
-                    email: email,
-                    pswd: pswd,
-                    rpswd: rpswd
-                },
-                success: function (response) {
-                    console.log(response);
-                },
-                error: function (error) {
-                    console.error(error);
-                }
-            });
-        }
-    </script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./login.js" charset="UTF-8"></script>   
